# Phonebook

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Surveillance.sqlite  a.out  addOrganisation.cpp  addPerson.cpp  checkConnection.py  cmake_install.cmake  container.txt  data.cpp  data.hpp  geocode.py  getOccupation.cpp  getOrganisation.cpp  getPerson.cpp  insert.cpp  insert.hpp  libsqlite.hpp  occupation.hpp  organisation.hpp  person.hpp  source.cpp  sourcev3  update.py
helpCode/: test.cpp  testtest.cpp  testtest.hpp
